--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/persona?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = cesarh123
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
